--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "memory-cache": "^0.2.0",
     "react": "^17.0.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
