--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "memory-cache": "^0.2.0",
     "react": "^17.0.1",
     "react-animated-slider": "^2.0.0",
